Corrected the comments